Run full test coverage with Vector enabled