@@ -296,6 +296,52 @@ final class WorkCounterConfig {
       </build>
     </profile>
     <profile>
+      <id>vector-tests</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>prepare-vector-test-classes</id>
+                <phase>process-test-classes</phase>
+                <goals>
+                  <goal>run</goal>
+                </goals>
+                <configuration>
+                  <target>
+                    <delete dir="${project.build.directory}/vector-test-classes" quiet="true"/>
+                    <copy todir="${project.build.directory}/vector-test-classes">
+                      <fileset dir="${project.build.outputDirectory}"/>
+                    </copy>
+                    <copy
+                        todir="${project.build.directory}/vector-test-classes/org/safere"
+                        overwrite="true">
+                      <fileset
+                          dir="${project.build.outputDirectory}/META-INF/versions/26/org/safere"/>
+                    </copy>
+                  </target>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>
+                @{argLine} --add-modules=jdk.incubator.vector
+                -Dorg.safere.experimental.utf8ScanProvider=vector
+              </argLine>
+              <classesDirectory>${project.build.directory}/vector-test-classes</classesDirectory>
+              <useModulePath>false</useModulePath>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>work-counters</id>
       <properties>
         <workCounter.enabled>true</workCounter.enabled>
